fix z-index positioning

--- a/style.css
+++ b/style.css
@@ -222,6 +222,7 @@ header {
     bottom: 20px;
     left: 50%;
     transform: translateX(-50%);
+    z-index: 2;
 }
 .scroll__icon{
     width: 20px;
@@ -537,6 +538,7 @@ footer {
     background-color: #242424;
     /* display: flex; */
     padding: 6% 0;
+    z-index: 2;
 }
 
 .footer__row {
